k8s/mysql/mysql_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mysql_network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mysql_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mysql_network: "true"
